# arm-linux-template

./: CMakeLists.txt  README.md  cross.cmake  setup_environment.sh
scripts/: mount_device.sh  ssh_setup.sh  start_debug.sh
src/: main.cpp
